# ai-architect-terminal

./: README.md  cargo_errors.txt  package-lock.json  package.json
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/capabilities/: default.json
src-tauri/icons/: icon.icns
src-tauri/resources/modes/: _base_system_prompt.md  architecture.md  design_review.md  ideation.md  inline_edit_prompt.md  registry.json
src-tauri/src/: commands.rs  database.rs  lib.rs  llm.rs  modes.rs
src/app/: globals.css  layout.tsx  page.tsx
src/components/: FloatingCommandBar.tsx  HistoryPanel.tsx  Icons.tsx  InputZone.tsx  ModeSelector.tsx  OutputZone.tsx  Rail.tsx  SettingsPanel.tsx  StatusBar.tsx  TitleBar.tsx
src/hooks/: useLlmStream.ts
src/stores/: index.ts
